--- a/src/alembic.ini
+++ b/src/alembic.ini
@@ -39,7 +39,7 @@ prepend_sys_path = .
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:postgres@db/postgres
+sqlalchemy.url = postgresql://postgres:postgres@db:5432/postgres
 
 
 [post_write_hooks]
